[package]
name = "moos-rust"
version = "0.1.0"
authors = ["jbabyhacker <jasoneklein5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moos-sys = { path="../moos-sys"}

[dev-dependencies]
crate-root = "0.1.3"